# mongo-polars-scaffold

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs  utils.rs
src/export/: export.rs  mod.rs  pipelines.rs
